Import of INA/Char-UTF2-0.73 from CPAN.
gitpan-cpan-distribution: Char-UTF2
gitpan-cpan-version:      0.73
gitpan-cpan-path:         INA/Char/UTF2/Char-UTF2-0.73.tar.gz
gitpan-cpan-author:       INA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -35,7 +35,7 @@ NOTICE
       I wanted to name this software UTF8, however it is impossible
       because there is already utf8 pragma.
 
-INSTALLATION BY MAKE (for UNIX)
+INSTALLATION BY MAKE (for UNIX like system)
 
 To install this software by make, type the following:
 
