Import of INA/Char-UTF2-0.79 from CPAN.
gitpan-cpan-distribution: Char-UTF2
gitpan-cpan-version:      0.79
gitpan-cpan-path:         INA/Char/UTF2/Char-UTF2-0.79.tar.gz
gitpan-cpan-author:       INA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -562,4 +562,4 @@ For example, Eutf2::chop function returns this octet.
 
 SEE ALSO
 
-perl, Sjis.pm, Request for Comments: 3629 - UTF-8, a transformation format of ISO 10646
+perl, UTF2.pm, Eutf2.pm, jacode.pl, Request for Comments: 3629 - UTF-8, a transformation format of ISO 10646
