--- a/README
+++ b/README
@@ -12,7 +12,7 @@ DESCRIPTION
   environment in UTF-8 by easy installation and easy usage.
 
   - Character oriented regular expression
-  - Character oriented run-time routines
+  - Character oriented runtime routines
   - Character oriented subroutines
       and
   - Byte oriented CORE::* functions
@@ -45,6 +45,7 @@ INSTALLATION
 
 SUBROUTINES
 
+  UTF2::eval(charstring)
   UTF2::length(charstring)
   UTF2::substr(charstring, charpos, charlen)
   and more...
